# yava

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  flake.nix
assets/shaders/: traingle.frag  traingle.vert
scripts/: build_proj.bat  compile_shaders.bat
shaders/: traingle.vert
src/: main.cxx
src/app/: app.cxx  app.hxx  pch.hxx  triangle.cxx  triangle.hxx  window.cxx  window.hxx
src/app/settings/: core.hxx
src/app/vulkan/: command_buffer.cxx  command_pool.cxx  debug.cxx  devices.cxx  drawFrame.cxx  draw_frame.cxx  framebuffers.cxx  graphics_pipeline.cxx  graphics_pipline.cxx  imageView.cxx  image_view.cxx  instance.cxx  render_pass.cxx  render_path.cxx  surface.cxx  swap_chain.cxx  sync_objects.cxx  vertex_buffer.cxx  vulkan.cxx  vulkan.hxx
src/app/vulkan/helpers/: buffer.cxx  buffer.hxx  debug.cxx  debug.hxx  depth.cxx  helpers.hxx  image.cxx  image.hxx  mipmap.cxx  msaa.cxx  mvp.hxx  queue.cxx  queue.hxx  shaders.cxx  shaders.hxx  structs.hxx  swapChain.cxx  swapChain.hxx  swap_chain.cxx  swap_chain.hxx  vertex.hxx
src/app/vulkan/initSystems/: buffers.cxx  command.cxx  commandBuffer.cxx  commandPool.cxx  commands.cxx  context.cxx  debug.cxx  depth.cxx  descriptors.cxx  devices.cxx  framebuffers.cxx  graphicsPipeline.cxx  imageView.cxx  indexBuffer.cxx  instance.cxx  model.cxx  msaa.cxx  mvp.cxx  objects.cxx  renderPass.cxx  surface.cxx  swapChain.cxx  swapСhain.cxx  textureImage.cxx  textures.cxx  uniformBuffer.cxx  vertexBuffer.cxx
src/app/vulkan/init_systems/: command_buffer.cxx  debug.cxx  devices.cxx  framebuffers.cxx  graphics_pipeline.cxx  image_view.cxx  instance.cxx  renderPass.cxx  surface.cxx  sync_objects.cxx  vertex_buffer.cxx
src/app/vulkan/settings/: extensions.hxx  frames.hxx  model.hxx  validation.hxx
src/app/window/: window.cxx  window.hxx
